Fixing encoding and adding tests

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ skip_missing_interpreters = True
 
 [testenv]
 commands = {envpython} tests/test_suite/author_test.py
+           {envpython} tests/test_suite/encoding_test.py
 deps = -rrequirements.txt
 setenv =
   PYTHONPATH = {toxinidir}
