--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py36
+envlist = py36, py37, py38, py39, py310, py311, py312
 skip_missing_interpreters = True
 
 [testenv]
@@ -13,9 +13,3 @@ commands = {envpython} tests/test_suite/author_test.py
 deps = -rrequirements.txt
 setenv =
   PYTHONPATH = {toxinidir}
-
-[testenv:py27]
-basepython = python
-
-[testenv:py36]
-basepython = python3
