--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py310, py311, py312
+envlist = py310, py311, py312, py313
 skip_missing_interpreters = True
 
 [testenv]
