chore: remove requirements.txt

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,11 @@ skip_missing_interpreters = True
 [testenv]
 commands = {envpython} tests/test_suite/author_test.py
            {envpython} tests/test_suite/encoding_test.py
-deps = -rrequirements.txt
+deps =
+    beautifulsoup4>=4.9.0
+    requests>=2.25.0
+    lxml>=4.6.0
+    unidecode>=1.2.0
+    pytest>=8.0.0
 setenv =
   PYTHONPATH = {toxinidir}
