--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,5 @@ envlist = py310, py311, py312, py313
 skip_missing_interpreters = True
 
 [testenv]
-commands = {envpython} tests/test_suite/author_test.py
-           {envpython} tests/test_suite/encoding_test.py
-deps =
-    beautifulsoup4>=4.9.0
-    requests>=2.25.0
-    lxml>=4.6.0
-    unidecode>=1.2.0
-    pytest>=8.0.0
-setenv =
-  PYTHONPATH = {toxinidir}
+extras = dev
+commands = pytest -v
