--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,6 +5,10 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    # Run every 2 weeks on Monday at 00:00 UTC
+    - cron: '0 0 1,15 * *'
+  workflow_dispatch:  # Allow manual trigger
 
 jobs:
   test:
