--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,12 +29,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        pip install tox
 
-    - name: Run tests with pytest
+    - name: Run tests
       run: |
-        pytest -v
-
-    - name: Run encoding tests
-      run: |
-        python tests/test_suite/encoding_test.py
+        tox -e py$(echo ${{ matrix.python-version }} | tr -d .)
